# libpfvdec

./: .gitignore  CMakeLists.txt  README.md  idct.glsl  idct_delta.glsl  main.c  test2.pfv
lib/: CMakeLists.txt  pfv.h
lib/inc/: bitstream.h  dct.h  huffman.h  opencl.h
lib/src/: bitstream.c  dct.c  dec.c  huffman.c
